{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 32,
  "lineage": "2920a676-b8f2-3de2-d6f8-ff34dfe08f49",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4b294825-13ff-472c-bf8f-85533364ee3e/resourceGroups/cmaz-xlej9t3c-mod4-rg/providers/Microsoft.Network/networkInterfaces/cmaz-xlej9t3c-mod4-nic",
            "internal_domain_name_suffix": "znd1v4je1sbenbp510lhqxevxc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4b294825-13ff-472c-bf8f-85533364ee3e/resourceGroups/cmaz-xlej9t3c-mod4-rg/providers/Microsoft.Network/publicIPAddresses/cmaz-xlej9t3c-mod4-pip",
                "subnet_id": "/subscriptions/4b294825-13ff-472c-bf8f-85533364ee3e/resourceGroups/cmaz-xlej9t3c-mod4-rg/providers/Microsoft.Network/virtualNetworks/cmaz-xlej9t3c-mod4-vnet/subnets/frontend"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "cmaz-xlej9t3c-mod4-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "cmaz-xlej9t3c-mod4-rg",
            "tags": {
              "Creator": "upal_chattopadhyay@epam.com"
            }
          },
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4b294825-13ff-472c-bf8f-85533364ee3e/resourceGroups/cmaz-xlej9t3c-mod4-rg/providers/Microsoft.Network/networkInterfaces/cmaz-xlej9t3c-mod4-nic|/subscriptions/4b294825-13ff-472c-bf8f-85533364ee3e/resourceGroups/cmaz-xlej9t3c-mod4-rg/providers/Microsoft.Network/networkSecurityGroups/cmaz-xlej9t3c-mod4-nsg",
            "network_interface_id": "/subscriptions/4b294825-13ff-472c-bf8f-85533364ee3e/resourceGroups/cmaz-xlej9t3c-mod4-rg/providers/Microsoft.Network/networkInterfaces/cmaz-xlej9t3c-mod4-nic",
            "network_security_group_id": "/subscriptions/4b294825-13ff-472c-bf8f-85533364ee3e/resourceGroups/cmaz-xlej9t3c-mod4-rg/providers/Microsoft.Network/networkSecurityGroups/cmaz-xlej9t3c-mod4-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.nic",
            "azurerm_network_security_group.nsg",
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4b294825-13ff-472c-bf8f-85533364ee3e/resourceGroups/cmaz-xlej9t3c-mod4-rg/providers/Microsoft.Network/networkSecurityGroups/cmaz-xlej9t3c-mod4-nsg",
            "location": "eastus",
            "name": "cmaz-xlej9t3c-mod4-nsg",
            "resource_group_name": "cmaz-xlej9t3c-mod4-rg",
            "security_rule": [],
            "tags": {
              "Creator": "upal_chattopadhyay@epam.com"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4b294825-13ff-472c-bf8f-85533364ee3e/resourceGroups/cmaz-xlej9t3c-mod4-rg/providers/Microsoft.Network/networkSecurityGroups/cmaz-xlej9t3c-mod4-nsg/securityRules/AllowHTTP",
            "name": "AllowHTTP",
            "network_security_group_name": "cmaz-xlej9t3c-mod4-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "cmaz-xlej9t3c-mod4-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/4b294825-13ff-472c-bf8f-85533364ee3e/resourceGroups/cmaz-xlej9t3c-mod4-rg/providers/Microsoft.Network/networkSecurityGroups/cmaz-xlej9t3c-mod4-nsg/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "cmaz-xlej9t3c-mod4-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "cmaz-xlej9t3c-mod4-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "cmaz-xlej9t3c-mod4-nginx",
            "fqdn": "cmaz-xlej9t3c-mod4-nginx.eastus.cloudapp.azure.com",
            "id": "/subscriptions/4b294825-13ff-472c-bf8f-85533364ee3e/resourceGroups/cmaz-xlej9t3c-mod4-rg/providers/Microsoft.Network/publicIPAddresses/cmaz-xlej9t3c-mod4-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.82.194.221",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "cmaz-xlej9t3c-mod4-pip",
            "resource_group_name": "cmaz-xlej9t3c-mod4-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "Creator": "upal_chattopadhyay@epam.com"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4b294825-13ff-472c-bf8f-85533364ee3e/resourceGroups/cmaz-xlej9t3c-mod4-rg/providers/Microsoft.Network/virtualNetworks/cmaz-xlej9t3c-mod4-vnet/subnets/frontend",
            "name": "frontend",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cmaz-xlej9t3c-mod4-rg",
            "virtual_network_name": "cmaz-xlej9t3c-mod4-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f9ba47cb-dc24-4682-85ff-de96785c95ba",
            "id": "/subscriptions/4b294825-13ff-472c-bf8f-85533364ee3e/resourceGroups/cmaz-xlej9t3c-mod4-rg/providers/Microsoft.Network/virtualNetworks/cmaz-xlej9t3c-mod4-vnet",
            "location": "eastus",
            "name": "cmaz-xlej9t3c-mod4-vnet",
            "resource_group_name": "cmaz-xlej9t3c-mod4-rg",
            "tags": {
              "Creator": "upal_chattopadhyay@epam.com"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}